--- a/src/cli/clap.yml
+++ b/src/cli/clap.yml
@@ -29,7 +29,7 @@ args:
         - verbose
 
 subcommands:
-  - volumify:
+  - encode:
       about: Compile chapter directories into volumes
       args:
         - compile:
