Add decoding feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ clap = { version = "2.33.0", features = [ "yaml" ] }
 log = "0.4.8"
 fern = { version = "0.5.9", features = [ "colored" ] }
 zip = "0.5.4"
+pdf = { git = "https://github.com/pdf-rs/pdf.git" }
