Fix: make input comic path required on decoding

--- a/src/cli/clap.yml
+++ b/src/cli/clap.yml
@@ -117,6 +117,7 @@ subcommands:
         - input:
             index: 1
             takes_value: true
+            required: true
             help: The comic book to decode
 
         - output:
