--- a/src/cli/clap.yml
+++ b/src/cli/clap.yml
@@ -62,6 +62,10 @@ subcommands:
             requires:
               - compile
 
+        - volumes-pages-suffix:
+            long: volumes-pages-suffix
+            help: Add the number of pages at the end of each volume's filename
+
         - create-output-dir:
             long: create-output-dir
             help: Creates output directory if it does not exist yet
